# mutekix

./: .clangd  .gitmodules  LICENSE  README.md  annotated.html  annotated_dup.js  assets_8h.html  assets_8h.js  assets_8h_source.html  check-generic_8hpp_source.html  classes.html  console_8h.html  console_8h.js  console_8h_source.html  coverage_8h_source.html  dir_048b630d07c3e94c5616c9c351c36288.html  dir_048b630d07c3e94c5616c9c351c36288.js  dir_23cadafcac33abb6581ff12359d915be.html  dir_23cadafcac33abb6581ff12359d915be.js  dir_33cd712690f482ce4e8e7028b5da7def.html  dir_33cd712690f482ce4e8e7028b5da7def.js  dir_7952f3afeb2b6f35fd61a9e53250828f.html  dir_ce225401684c5e3532f3c43b14dc3b6f.html  dir_ce225401684c5e3532f3c43b14dc3b6f.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  exm-header_8h_source.html  exn-header_8h_source.html  files.html  functions.html  functions_vars.html  globals.html  globals_func.html  globals_type.html  globals_vars.html  index.html  index.js  m-algo_8h_source.html  m-array_8h_source.html  m-atomic_8h_source.html  (+108 more)
.github/workflows/: doxygen.yml
include/mutekix/: assets.h  console.h  thread_wrapper.h  threading.h  time.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  files_2.js  functions_0.js  (+13 more)
src/: assets.c  console.c  thread_wrapper_armv4T.s  threading.c  time.c
